alignment issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,6 @@ html {
   margin: 0;
 }
 
-
-
 /* <img itemprop="contentUrl" class="view_img" id="vimg" data-height="517" alt="untitled, paper, old, texture, parchment, background, antique, HD wallpaper" src="" height="517"> */
 
 body {
@@ -30,9 +28,11 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
   color: black;
-  font-family: sans-serif;
-  font-size: 24px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-style: bold;
+  font-size: 32px;
   text-decoration: none;
+
 }
 
 button {
@@ -90,20 +90,28 @@ button {
   .homepage-div {
     display: flex;
     padding-top: 5%;
+    justify-content: center;
   }
   
   .top-books {
-    display: flexbox;
+    /* display: flexbox; */
   }
   
+  .book-card-div {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
   .book-card {
-    background-size: cover;
-    display:flex;
-    border-radius: 4px;
-    margin:2%;
+    /* background-size: cover; */
+    /* display:flex; */
+    width: 15%;
+    /* border-radius: 4px; */
+    margin: 2%;
+    border-bottom: 2px solid black;
   }
 .book-img {
-  float: left;
+  /* float: left; */
   width: 50%;
 }
 
@@ -111,8 +119,8 @@ button {
   padding-top: 5%;
   padding-left: 5%;
   padding-right: 5%;
-  float: right;
-  max-width: 30%;
+  /* float: right; */
+  /* max-width: 30%; */
   text-align: center;
 }
 
@@ -127,8 +135,8 @@ button {
 .story-card {
   width: 25%;
   margin:2%;
-  border: 2px solid black;
-  border-radius: 4px;
+  border-bottom: 2px solid black;
+  /* border-radius: 4px; */
   height: 700px;
   overflow-y: auto;
 }
@@ -141,19 +149,24 @@ button {
   height: auto;
 }
 
-.home-left {
+/* .home-left {
   float: left;
-  width: 50%;
+  width: 70%;
   align-items: center;
   vertical-align: middle;
   margin: 0% 10% 10% 0%;
-}
+  border-left: 5px solid black;
+} */
 
 .home-right {
-  float: right bottom;
+  /* float: right bottom; */
   width: 50%;
   align-items: center;
-  vertical-align: middle;
+  justify-content: center;
+  /* vertical-align: middle; */
+  /* margin: 0% 10% 10% 0%; */
+  border-left: 5px solid black;
+  border-right: 5px solid black;
 }
 
 img {
